Add version mobile and Tablet

--- a/index.html
+++ b/index.html
@@ -50,13 +50,16 @@
       <section class="header">
         <div class="infos-header">
           <h1>Tale</h1>
-          <div>
-            <span>HOME</span>
-            <span>SERVICES</span>
-            <span>PROJECTS</span>
-            <span>PAGES</span>
-            <span>INFOS</span>
-            <span>CONTACT</span>
+          <div id="menu-btn">
+            <button class="mobile-menu-btn">Menu</button>
+          </div>
+          <div class="buttons-header">
+            <span class="btn-header">HOME</span>
+            <span class="btn-header">SERVICES</span>
+            <span class="btn-header">PROJECTS</span>
+            <span class="btn-header">PAGES</span>
+            <span class="btn-header">INFOS</span>
+            <span class="btn-header">CONTACT</span>
           </div>
         </div>
       </section>
@@ -65,8 +68,8 @@
     <main>
       <div class="container">
         <section class="main">
-          <div>
-            <div>
+          <div class="about">
+            <div id="title">
               <h2>SEO DIGITAL AGENCY</h2>
             </div>
 
@@ -110,5 +113,6 @@
         </section>
       </div>
     </main>
+    <script type="module" src="./scripts/index.js"></script>
   </body>
 </html>
